# val-tracker

./: .gitignore  CHANGELOG.md  DATABASE_SCHEMA.md  README.en.md  README.md  api_henrik.json  index.html  package-lock.json  package.json  prompt-refonte-design.md  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: audit.yml  build.yml  release.yml
aidd_docs/: CONTRIBUTING.md  GUIDELINES.md  README.md
aidd_docs/memory/: README.md  api.md  architecture.md  codebase-map.md  coding-assertions.md  database.md  deployment.md  design.md  desktop.md  integration.md  navigation.md  project-brief.md  testing.md  vcs.md
scripts/: generate-changelog-draft.ps1  release.ps1
src/: App.tsx  index.css  main.tsx  test-setup.ts
src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  main.json  overlay.json
src-tauri/proxy/: README.md  package.json  worker.js  worker.test.js  wrangler.toml
src-tauri/src/: applog.rs  commands.rs  db.rs  diagnostics.rs  discord_rpc.rs  discord_webhook.rs  dpapi.rs  economy_stats.rs  friend_watcher.rs  highlights.rs  image_proxy.rs  inactivity_reminder.rs  loss_streak.rs  main.rs  map_averages.rs  queue_stats.rs  recommendations.rs  security_config.rs  settings.rs  side_stats.rs  status_watcher.rs  tracker_score.rs  updater.rs  win_streak.rs
src-tauri/src/api/: mod.rs
src-tauri/src/api/henrik/: cache.rs  client.rs  endpoints.rs  endpoints_esports.rs  endpoints_premier.rs  mod.rs  rate_limiter.rs  types.rs  types_esports.rs  types_premier.rs
src-tauri/src/commands/: esports.rs  henrik_fetch.rs  local_data.rs  misc.rs  mod.rs  overlay.rs  party_stats.rs  premier.rs  self_account.rs  settings.rs
src-tauri/src/db/: changelog.rs  friend_personal_bests.rs  goals.rs  match_notes.rs  metrics.rs  mod.rs  party.rs  players.rs  snapshots.rs  timeline.rs
src-tauri/src/overlay/: mod.rs  window.rs
src-tauri/src/riot_local/: agents.rs  client.rs  lockfile.rs  mod.rs  poller.rs
src/components/: AccountSwitcher.test.tsx  AccountSwitcher.tsx  AccountTimeline.tsx  AgentGlyph.tsx  AgentIcon.tsx  ApiStatusBadge.tsx  ChangelogModal.tsx  CommandPalette.tsx  ConfirmDialog.tsx  CopyButton.tsx  DataFreshnessDot.tsx  DetectionStatusBadge.tsx  EmptyState.tsx  ErrorState.tsx  ExternalImage.tsx  FloatingSessionTabs.tsx  FollowedFriendsPanel.tsx  HighlightsPanel.tsx  HomeGoalsSection.tsx  HomeOverviewSection.tsx  HomeStatusBar.tsx  HomeTimelineSection.tsx  InfoTooltip.tsx  LeaderboardPercentileCard.tsx  MarkdownLite.tsx  MatchNotesPanel.tsx  MatchRow.tsx  MiniOverlay.tsx  OnboardingWizard.test.tsx  OnboardingWizard.tsx  Panel.tsx  PerformanceHeatmap.tsx  PeriodRecapModal.tsx  PlayerNotesPanel.test.tsx  PlayerNotesPanel.tsx  ProfileCardModal.tsx  ProgressionGoalPanel.tsx  QueueStatusStrip.tsx  RankBadge.tsx  RankHistoryChart.tsx  (+13 more)
src/hooks/: useCountdown.ts  useHomeData.ts  useLiveState.ts  useMatches.ts  useMeta.ts  usePlayer.ts  usePrefersReducedMotion.ts  usePremier.ts  useSelfAccountCycling.ts  useUpdater.ts  useVlr.ts
src/i18n/: index.ts
src/lib/: agentRoles.test.ts  agentRoles.ts  downloadFile.ts  exportLocalStats.ts  format.test.ts  format.ts  fuzzy.ts  matchDrag.ts  matchReport.test.ts  matchReport.ts  pdfReport.ts  profileCard.test.ts  profileCard.ts  recapCard.test.ts  recapCard.ts  shareExport.ts  stats.test.ts  stats.ts  tauriApi.test.ts  tauriApi.ts  (+2 more)
(+115 files in other folders)
