[package]
name = "val-tracker"
version = "0.1.0"
description = "Valorant Tracker — app desktop de suivi de rank et de stats"
license = "GPL-3.0-or-later"
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# V2 — overlay en jeu : raccourci global (bascule click-through) + notification de fin
# de partie.
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
# V3 — Rich Presence Discord : IPC local vers le client Discord desktop (pas d'API réseau).
discord-rich-presence = "1"
base64 = "0.22"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }

rusqlite = { version = "0.31", features = ["bundled"] }

chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
urlencoding = "2"

[target.'cfg(windows)'.dependencies]
# Chiffrement au repos de la clé API Henrik via DPAPI (voir settings.rs::crypto) — liée au
# compte Windows de l'utilisateur, pas de secret supplémentaire à gérer.
windows = { version = "0.61", features = ["Win32_Security_Cryptography", "Win32_Foundation"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
